implementata parte 1 di es 71